fix children overflow

--- a/src/components/layout/main-layout.module.css
+++ b/src/components/layout/main-layout.module.css
@@ -11,7 +11,6 @@
 }
 
 .children {
-  overflow-y: auto;
   padding: 24px;
   box-sizing: border-box;
 }
